# perp_finish_cam

./: .gitignore  Pipfile  README.md  cert.pem  grabber.py  key.pem  main.py  pyproject.toml  rsync_to_perp.sh
finishcam/: grabber.py  logfilters.py  preview.py  pubsub.py  timespan_grabber.py  webapp.py
finishcam/templates/: index.html.jinja  layout.html.jinja  session.html.jinja
frontend/: index.html
js/: live.js  time.js
js/measuring/: browser.js  canvas.js  index.js  measuring.js  metadata.js  styles.js
static/: lit.js  live.js  measuring.js  time.js
static/browser/: index.js  styles.js
static/measuring/: browser.js  canvas.js  index.js  measuring.js  metadata.js  styles.js
