[tool.poetry]
name = "perp-finish-cam"
version = "1.0.0"
description = "Software-based slot camera system for finish-line photography"
authors = ["Till Schulte-Coerne <till@perp.de>"]
license = "PolyForm-Noncommercial-1.0.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
opencv-python = "^4.9.0.80"
numpy = "^1.26.3"
quart = "^0.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
